--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ build/
 # Gemfile.lock
 # .ruby-version
 # .ruby-gemset
+*.env
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
